# ragWithAgent

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE_REVIEW.md  LICENSE  LOCAL_DEVELOPMENT_GUIDE.md  PROJECT_RESTRUCTURE_PLAN.md  Procfile  README.md  STOCK_AGENT_INTEGRATION_REPORT.md  TRAINING_QUICK_START.md  YUQING_INTEGRATION_QUICKSTART.md  alembic.ini  compatibility_report.json  docker-compose.yml  environment.yml  pyproject.toml  requirements-dev.txt  requirements.txt  start_all.py  stop_all.py
.cursor/rules/: ragwithagent.mdc
alembic/: env.py
apps/dashboard-ui/: dashboard-ui.md  requirements.txt
apps/rag-analysis/: Dockerfile  README.md  YUQING_INTEGRATION_GUIDE.md  requirements.txt
apps/stock-agent/: Dockerfile  MONGODB_CONFIG.md  README.md  SCHEDULER_GUIDE.md  USAGE.md  requirements.txt  test_scheduler.py
apps/yuqing-sentiment/: Dockerfile  README.md  requirements.txt
configs/environments/: development.yml  production.yml
configs/services/: rag-analysis.yml  yuqing-sentiment.yml
deployments/local/: Procfile
docs/: 产品说明书.md
docs/api/: TRAINING_COMMANDS.md  yuqing-sentiment.md
docs/architecture/: plan.md
docs/user-guide/: GETTING_STARTED.md
libs/common/: __init__.py
libs/database/: __init__.py
libs/messaging/: __init__.py
scripts/: setup_local_development.py  start_all.py  verify_local_compatibility.py
services/: __init__.py
services/decision_engine/: __init__.py  contrastive_learning_samples.py  contrastive_rag_enhancer.py
tools/db/: yuqing_reset.py
tools/development/: quick_train_test.py  (+1 more)
(+103 files in other folders)
